examples/negative/diagnostic_quality/prelude_call_anchors_at_user.kai
# Diagnostic quality (#520 / category 7): a call to the
# prelude function `print` with the wrong argument type must
# anchor at the *user* call site, not at the prelude
# declaration in stdlib. The fixture exists to lock the
# "anchor at user file" property — the regression that
# motivated #502.

fn main() : Int / Stdout = {
  print(42)
  0
}
