examples/negative/diagnostic_quality/prelude_call_anchors_at_user.diag.expected
# Every non-comment, non-empty line below must appear in stderr
# (fixed-substring match, order-independent). Locks the anchor
# at the user file plus the contextual notes.
error: type mismatch in function call
prelude_call_anchors_at_user.kai:9
  print(42)
expected: (String) -> Unit
in argument 1 of `print`
